// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarItem should match a snapshot - Number 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.label />
    <mock-styled.input
      classname=""
      type="number"
      value=""
    />
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Radio 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.label />
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Select 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.label />
    <mock-styled.div
      value=""
    />
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Slider 1`] = `<DocumentFragment />`;

exports[`ToolbarItem should match a snapshot - Text 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.label />
    <mock-styled.input
      classname=""
      type="text"
      value=""
    />
  </mock-styled.div>
</DocumentFragment>
`;
